--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
 
           ls -la local_libs/libdvdread/lib || { echo "libdvdread build failed or lib directory missing"; exit 1; }
 
-      # Build libdvdnav
+      # Build libdvdnav with enhanced logging and configure inspection
       - name: Build libdvdnav
         run: |
           export PKG_CONFIG_PATH=$(pwd)/local_libs/libdvdread/lib/pkgconfig
@@ -76,17 +76,14 @@ jobs:
 
           # Clean up old artifacts if any
           cd local_libs/libdvdnav
-          make distclean || true
-
-          # Run autoupdate to update obsolete macros
-          autoupdate || true  # Log any warnings during the process
 
           # Reconfigure the build system
-          autoreconf -i  # Re-generate configure script with latest autoconf tools
+          autoupdate || true  # Handle obsolete macros and capture logs
+          autoreconf -i || true  # Re-generate all the necessary files
 
-          # Debug the configure file to locate any issues around the error line
-          head -n 200 configure  # Output the first 200 lines for inspection
-          tail -n 200 configure  # Output the last 200 lines for inspection
+          # Inspect configure script around the error location
+          head -n 50 configure || true  # First 50 lines
+          tail -n 50 configure || true  # Last 50 lines
 
           # Configure build with prefix
           ./configure --prefix=$(pwd) || { echo "Configure step failed"; exit 1; }
@@ -101,7 +98,6 @@ jobs:
 
           # Check if the library was successfully built and installed
           ls -la local_libs/libdvdnav/lib || { echo "libdvdnav build failed or lib directory missing"; exit 1; }
-
 
       # Build the dvdnavtex binary
       - name: Build dvdnavtex binary
