--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v3
 
       # Ensure Xcode command line tools are installed
       - name: Install Xcode Command Line Tools
@@ -32,7 +32,7 @@ jobs:
       - name: Set up dependencies on macOS
         run: |
           brew update
-          brew install autoconf automake libtool pkg-config git llvm
+          brew install autoconf automake libtool pkg-config git
 
       # Build libdvdcss
       - name: Build libdvdcss
@@ -42,7 +42,7 @@ jobs:
           fi
           cd local_libs/libdvdcss
           autoreconf -i
-          ./configure --prefix=$(pwd)
+          ./configure --prefix=$(pwd) --disable-shared --enable-static
           make
           make install
           cd ../../
@@ -57,7 +57,8 @@ jobs:
           autoreconf -i
           ./configure --prefix=$(pwd) \
             --with-libdvdcss-includes=$(pwd)/../libdvdcss/include \
-            --with-libdvdcss-lib=$(pwd)/../libdvdcss/lib
+            --with-libdvdcss-lib=$(pwd)/../libdvdcss/lib \
+            --disable-shared --enable-static
           make
           make install
           cd ../../
@@ -84,7 +85,7 @@ jobs:
           autoreconf -i
 
           # Configure and build
-          ./configure --prefix=$(pwd)
+          ./configure --prefix=$(pwd) --disable-shared --enable-static
           make
           make install
           cd ../../
@@ -99,7 +100,7 @@ jobs:
 
       # Cache the build output
       - name: 💭 Cache application
-        uses: actions/cache@v3.2.2
+        uses: actions/cache@v3
         id: dvdnavtex-build
         with:
           path: ./dvdnavtex
@@ -109,11 +110,11 @@ jobs:
     name: 👷 Setup macOS .pkg
     runs-on: macos-latest
     needs: [build]
-    timeout-minutes: 5
+    timeout-minutes: 10
 
     steps:
       - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v3
 
       # Ensure Homebrew is installed
       - name: Install Homebrew and update
@@ -128,7 +129,7 @@ jobs:
 
       # Fetch application cache
       - name: 🤌💭 Fetch application cache
-        uses: actions/cache@v3.2.2
+        uses: actions/cache@v3
         id: dvdnavtex-build
         with:
           path: ./dvdnavtex
@@ -194,19 +195,18 @@ jobs:
 
       # Run munkipkg for packaging
       - name: Run munkipkg 🧙‍♂️📦
-        uses: joncrain/munkipkg-action@5a6c2008ded522b67396a78c06983e614cbe22ac
+        uses: joncrain/munkipkg-action@v1.5
         with:
           pkg_subdir: "munki-pkg-workspace"
 
       # Cache the .pkg output
       - name: 💭 Cache .pkg
-        uses: actions/cache@v3.2.2
+        uses: actions/cache@v3
         id: macos-pkg
         with:
           path: |
             ./munki-pkg-workspace/build/*
           key: ${{ github.sha }}
-
 
   release:
     name: 📦 Release
@@ -215,11 +215,11 @@ jobs:
 
     steps:
       - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v3
 
       # Fetch macOS .pkg cache
       - name: 🤌💭 Fetch macOS .pkg Cache
-        uses: actions/cache@v3.2.2
+        uses: actions/cache@v3
         id: macos-pkg
         with:
           path: |
