--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
           make install
           cd ../../
 
-      # Build libdvdread
+      # Build libdvdread with libdvdcss
       - name: Build libdvdread
         run: |
           if [ ! -d local_libs/libdvdread ]; then
