--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,9 +125,14 @@ jobs:
 
       - name: Run dvdnavtex tests
         run: |
-          ls -la
           cd ./bbb_dvd_creator/custom_dvd/VIDEO_TS
-          /Users/runner/work/dvd_nav_packet_extract/dvd_nav_packet_extract/dvdnavtex VTS_01_1.VOB
+          /Users/runner/work/dvd_nav_packet_extract/dvd_nav_packet_extract/dvdnavtex --test VTS_01_1.VOB
+          if [ $? -eq 0 ]; then
+            echo "✅ dvdnavtex test passed"
+          else
+            echo "❌ dvdnavtex test failed"
+            exit 1  # Ensure the workflow stops and reports failure
+          fi
 
       # Cache the build output
       - name: 💭 Cache application
